Fixed some overlapping issues on shop page

--- a/static/CSS/Items/utilities.css
+++ b/static/CSS/Items/utilities.css
@@ -44,7 +44,7 @@
 .card img {
   width: 100%;
   border-radius: 2px;
-  max-height: 170px;
+  max-height: 145px;
   object-fit: cover;
   transition-duration: 0.5s;
 }
