--- a/static/CSS/Pages/shop.css
+++ b/static/CSS/Pages/shop.css
@@ -231,9 +231,9 @@
 
 @media (max-width: 860px) {
 
-  #expand.active {
+  .products .card.active #expand {
     font-size: 1rem;
-    bottom: -1rem;
+    bottom: -1.1rem;
   }
 
   .products .card-container {
